--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.1",
     "typewriter-effect": "^2.21.0"
   },
